changed title of tensorboard json

--- a/tensorboard_files/template_projector_config.json
+++ b/tensorboard_files/template_projector_config.json
@@ -1,7 +1,7 @@
 {
   "embeddings": [
     {
-      "tensorName": "Depression Tensor",
+      "tensorName": "r/depression",
       "tensorShape": [
         1000,
         50
