--- a/tensorboard_files/template_projector_config.json
+++ b/tensorboard_files/template_projector_config.json
@@ -1,13 +1,13 @@
 {
   "embeddings": [
     {
-      "tensorName": "r/depression",
+      "tensorName": "r/depression model",
       "tensorShape": [
         1000,
         50
       ],
-      "tensorPath": "https://raw.githubusercontent.com/dirtylittledirtbike/project_04/main/tensorboard_files/vecs.tsv",
-      "metadataPath": "https://raw.githubusercontent.com/dirtylittledirtbike/project_04/main/tensorboard_files/meta.tsv"
+      "tensorPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/depression_vecs.tsv",
+      "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/depression_meta.tsv"
     },
     {
         "tensorName": "google's model",
@@ -15,8 +15,8 @@
             1000,
             50
         ],
-        "tensorPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/glove_embeddings/main/glove_vecs.tsv",
-        "metadataPath": "https://raw.githubusercontent.com/dirtylittledirtbike/glove_embeddings/main/glove_meta.tsv"
+        "tensorPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/glove_vecs.tsv",
+        "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/glove_meta.tsv"
     }
   ]
 }
