--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 /tensorboard_files/glove_meta.tsv filter=lfs diff=lfs merge=lfs -text
 /tensorboard_files/twitter_vecs.tsv filter=lfs diff=lfs merge=lfs -text
 /tensorboard_files/twitter_meta.tsv filter=lfs diff=lfs merge=lfs -text
+/tensorboard_files/wiki_meta.tsv filter=lfs diff=lfs merge=lfs -text
+/tensorboard_files/wiki_vecs.tsv filter=lfs diff=lfs merge=lfs -text
