--- a/tensorboard_files/template_projector_config.json
+++ b/tensorboard_files/template_projector_config.json
@@ -10,7 +10,7 @@
       "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/depression_meta.tsv"
     },
     {
-        "tensorName": "tensorflow demo",
+        "tensorName": "tensorflow word2vec",
         "tensorShape": [
             71291,
             200
