--- a/tensorboard_files/template_projector_config.json
+++ b/tensorboard_files/template_projector_config.json
@@ -10,22 +10,13 @@
       "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/depression_meta.tsv"
     },
     {
-        "tensorName": "news glove",
+        "tensorName": "wiki glove",
         "tensorShape": [
             400000,
             50
         ],
         "tensorPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/glove_vecs.tsv",
         "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/glove_meta.tsv"
-    },
-    {
-        "tensorName": "twitter glove",
-        "tensorShape": [
-            1000,
-            50
-        ],
-        "tensorPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/twitter_vecs.tsv",
-        "metadataPath": "https://media.githubusercontent.com/media/dirtylittledirtbike/project_04/main/tensorboard_files/twitter_meta.tsv"
     }
   ]
 }
