--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 /tensorboard_files/twitter_meta.tsv filter=lfs diff=lfs merge=lfs -text
 /tensorboard_files/wiki_meta.tsv filter=lfs diff=lfs merge=lfs -text
 /tensorboard_files/wiki_vecs.tsv filter=lfs diff=lfs merge=lfs -text
+data_clean/data_full_clean.csv filter=lfs diff=lfs merge=lfs -text
